<resources>
    <string name="app_name">Nesti :  Mes recettes</string>
    <string name="txt_main_title">Choisir une catégorie</string>
    <string name="txt_btn_easy">Facile à faire</string>
    <string name="txt_btn_traditionel">Traditionnelles</string>
    <string name="txt_btn_gluten">Sans gluten</string>
    <string name="txt_btn_season">C\'est de saison</string>
    <string name="txt_menu_list">Liste de courses</string>
    <string name="txt_menu_search">Rechercher une recette</string>
    <string name="txt_menu_presentation">Présentation</string>
    <string name="txt_menu_contact">Contact</string>
    <string name="txt_menu_team">Equipe</string>
    <string name="txt_menu_project">Projets</string>
    <string name="txt_title_easy">Recettes faciles</string>
    <string name="btn_easy_back">RETOUR</string>
    <string name="txt_title_trad">Recettes traditionnelles</string>
    <string name="btn_trad_back">RETOUR</string>
    <string name="txt_title_season">Recettes de saison</string>
    <string name="btn_season_back">RETOUR</string>
    <string name="txt_title_category">Recettes sans gluten</string>
    <string name="btn_category_back">RETOUR</string>
    <string name="button_one" />
    <string name="img_author" />
    <string name="txt_title_recipe">Titre</string>
    <string name="txt_author">auteur</string>
    <string name="img_star_5" />
    <string name="img_star" />
    <string name="txt_btn_ok">OK</string>
    <string name="txt_title_search">Rechercher</string>
    <string name="txt_subtitle_search">Quelle recette chercher vous ?</string>
    <string name="txt_title_result">Résultats de recherche</string>
    <string name="txt_to_fill">Recette</string>
    <string name="textview">TextView</string>
    <string name="voir_la_recette">voir la recette</string>
    <string name="category_textview_title">category</string>
    <string name="ingredient_textview_title">TextView</string>
    <string name="button_preparation">preparation</string>
    <string name="btn_shopping_cart">shopping_cart</string>
    <string name="ingredient_textview_name">ingredient_name</string>
    <string name="ingredient_textview_quantity">ingredient_quantity</string>
    <string name="ingredient_textview_unity">ingredient_unity</string>
    <string name="button">Button</string>
    <string name="preparation_textview_title">TextView_title</string>
    <string name="preparation_textview_content">TextView_content</string>
    <string name="cart_textview_title">Liste de courses</string>
    <string name="cart_checkedtextview">CheckedTextView</string>
    <string name="cart_button_empty">Vider le panier</string>
    <string name="todo">TODO</string>
    <string name="contact_textview_title">Mes coordonnées</string>
    <string name="editTextName">Stéphane Cadeck</string>
    <string name="editTextMail">s.cadeck@yahoo.fr</string>
    <string name="textViewName">stéphane</string>
    <string name="textview_name">Stéphane Cadeck</string>
    <string name="textview_adress">TextView</string>
    <string name="text_view_adress">Juvignac</string>
    <string name="textview_phone">06/40/78/17/61</string>
    <string name="text_view_mail">s.cadeck@yahoo.fr</string>
    <string name="text_view_team">L\'équipe</string>
    <string name="text_view_content">Un grand merci à toutes les personnes qui m\'ont aidés pour ce projet ainsi que les formateurs.</string>
    <string name="text_view_project">Le projet Nesti</string>
    <string name="text_view_content_project">Entreprise fictive à but pédagogique, Nesti Fondé en 1984 par les Frères Hernandez, notre établissement a fourni un excellent chocolat venant des quatres coins du monde. C\'est en 1945, que Marina Hernadez, decide de diversifier l\'entreprise familiale, sans perdre en prestige. Nesti devint alors une référence dans le monde de la patisserie Nous consacrons notre temps à trouver les meilleurs ingrédients à travers le monde. Afin que vous puissiez en famille et entre amis continuer à perpetuer l\'art de la patisserie. Parce que c\'est toujours un plaisir de partager !</string>
    <string name="nom_recette">nom recette</string>
</resources>