<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txt_main_title"
        android:textAlignment="center"
        android:textSize="36sp" />

    <Button
        android:id="@+id/btn_easy"
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/txt_btn_easy"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="@color/color_easy" />

    <Button
        android:id="@+id/btn_trad"
        android:layout_width="380dp"
        android:layout_height="112dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/txt_btn_traditionel"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="@color/color_traditional" />

    <Button
        android:id="@+id/btn_season"
        android:layout_width="380dp"
        android:layout_height="112dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="#36393F"
        android:text="@string/txt_btn_season"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="@color/color_seasonal" />

    <Button
        android:id="@+id/btn_gluten"
        android:layout_width="380dp"
        android:layout_height="112dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/txt_btn_gluten"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="@color/color_gluten" />

</LinearLayout>