<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp">

    <ImageView
        android:id="@+id/img_recipe"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="4dp"
        android:contentDescription="@string/img_author"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txt_title_recipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_title_recipe"
        android:textAlignment="textStart"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/img_recipe"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_author_recipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/txt_author"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/img_recipe"
        app:layout_constraintTop_toBottomOf="@+id/txt_title_recipe" />

    <ImageView
        android:id="@+id/img_star"
        android:layout_width="225dp"
        android:layout_height="89dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="18dp"
        android:contentDescription="@string/img_star"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toEndOf="@+id/img_recipe"
        app:layout_constraintTop_toBottomOf="@+id/txt_author_recipe"
        app:layout_constraintVertical_bias="0.947"
        app:srcCompat="@drawable/star_5" />

</androidx.constraintlayout.widget.ConstraintLayout>