<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactActivity">

    <TextView
        android:id="@+id/contact_textView_title"
        android:layout_width="324dp"
        android:layout_height="45dp"
        android:layout_marginStart="155dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="155dp"
        android:text="@string/contact_textview_title"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="287dp"
        android:layout_height="35dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="32dp"
        android:text="@string/textview_name"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_adress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_textView_title" />

    <TextView
        android:id="@+id/textView_adress"
        android:layout_width="115dp"
        android:layout_height="34dp"
        android:layout_marginStart="173dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="360dp"
        android:text="@string/text_view_adress"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.438"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewName" />

    <TextView
        android:id="@+id/textView_phone"
        android:layout_width="219dp"
        android:layout_height="35dp"
        android:layout_marginStart="173dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="135dp"
        android:layout_marginBottom="32dp"
        android:text="@string/textview_phone"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_mail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.663"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_adress"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView_mail"
        android:layout_width="189dp"
        android:layout_height="31dp"
        android:layout_marginStart="111dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="111dp"
        android:layout_marginBottom="32dp"
        android:text="@string/text_view_mail"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_phone" />

</androidx.constraintlayout.widget.ConstraintLayout>