<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ingredient_constaint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IngredientActivity">

    <TextView
        android:id="@+id/ingredient_textView_title"
        android:layout_width="335dp"
        android:layout_height="40dp"
        android:layout_marginStart="131dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="132dp"
        android:text="@string/ingredient_textview_title"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/ingredient_listView"
        android:layout_width="340dp"
        android:layout_height="416dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredient_textView_title" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ingredient_floatingActionButton_shoppingCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="41dp"
        android:clickable="true"
        android:contentDescription="@string/btn_shopping_cart"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ingredient_btn_preparation"
        app:layout_constraintTop_toBottomOf="@+id/ingredient_listView"
        app:srcCompat="@drawable/cart" />

    <Button
        android:id="@+id/ingredient_btn_preparation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="42dp"
        android:text="@string/button_preparation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ingredient_floatingActionButton_shoppingCart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredient_listView" />
</androidx.constraintlayout.widget.ConstraintLayout>